--- a/.gitignore
+++ b/.gitignore
@@ -249,3 +249,5 @@ nbdist/
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/netbeans,visualstudiocode,intellij,java
+
+src/java/dbContext/
