--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ excludes=
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\jaxb-api-2.1.jar
+file.reference.mssql-jdbc.jar=C:\\Users\\My Lap\\mssql-jdbc.jar
 file.reference.sqljdbc42.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.mssql-jdbc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
