--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,12 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -28,8 +34,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=D:\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=C:\\Users\\My Lap\\Downloads\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=C:\\Users\\My Lap\\Downloads\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar-1=D:\\jaxb-api-2.1.jar
 file.reference.sqljdbc42.jar-1=D:\\sqljdbc42.jar
 includes=**
@@ -135,9 +141,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc.jar}:\
     ${file.reference.sqljdbc42.jar-1}:\
+    ${file.reference.jaxb-api-2.1.jar-1}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
-    ${file.reference.jaxb-api-2.1.jar-1}
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
