--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,19 +12,30 @@
     </servlet>
 
     <servlet>
+        <servlet-name>StaffServlet</servlet-name>
+        <servlet-class>controllers.StaffServlet</servlet-class>
+    </servlet>
+
+    <servlet>
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>controllers.RegisterServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>RoleServlet</servlet-name>
-        <url-pattern>/RoleServlet</url-pattern>
+        <url-pattern>/staffRoles</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>StaffServlet</servlet-name>
+        <url-pattern>/StaffServlet</url-pattern>
     </servlet-mapping>
     
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern> </servlet-mapping>
-
+    </servlet-mapping>
+    
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
         <url-pattern>/register</url-pattern> 
