--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,4 @@ nbdist/
 
 # End of https://www.toptal.com/developers/gitignore/api/netbeans,visualstudiocode,intellij,java
 src/java/dbContext/
+src/java/dbContext/DBContext.java
