--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,8 +31,6 @@ file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\ThinkPad\\OneDrive\
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\jaxb-api-2.1.jar
 file.reference.sqljdbc42.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\sqljdbc42.jar
-file.reference.sqljdbc42.jar-1=H:\\PRJ301_code\\library\\sqljdbc42.jar
-file.reference.sqljdbc4__1_.jar=H:\\PRJ301_code\\library\\sqljdbc4 (1).jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,9 +43,7 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.sqljdbc42.jar-1}:\
-    ${file.reference.sqljdbc4__1_.jar}
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
