--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,12 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -27,8 +33,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.jakarta.mail-2.0.1.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\jakarta.mail-2.0.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.activation.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\javax.activation.jar
 file.reference.jaxb-api-2.1.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\jaxb-api-2.1.jar
 file.reference.sqljdbc42.jar=C:\\Users\\ThinkPad\\OneDrive\\Desktop\\lib\\lib\\sqljdbc42.jar
 includes=**
@@ -43,7 +51,9 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.jakarta.mail-2.0.1.jar}:\
+    ${file.reference.javax.activation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
